preliminary image writing

--- a/src/bin/makefile
+++ b/src/bin/makefile
@@ -1,8 +1,10 @@
 include ../../makevariables 
 
-%.bin:
+$(bin): $(addprefix ../obj/, $(obj))
 	cd ../obj && $(cc) $(std) $(obj) -o ../bin/$@
-	./$@
+
+../obj/%.o:
+	$(MAKE) -C ../obj $*.o
 
 clean:
 	rm -f *.bin
