added the ability to actually save bmp files

--- a/src/bin/makefile
+++ b/src/bin/makefile
@@ -1,4 +1,4 @@
-include ../../makevariables 
+include ../../vars.make 
 
 $(bin): $(addprefix ../obj/, $(obj))
 	cd ../obj && $(cc) $(std) $(obj) -o ../bin/$@
