finally rendered a plane, but the plane is being rendered infront and behind.

--- a/src/bin/makefile
+++ b/src/bin/makefile
@@ -1,7 +1,7 @@
 include ../../vars.make 
 
 $(bin): $(addprefix ../obj/, $(obj))
-	cd ../obj && $(cc) $(std) $(obj) -o ../bin/$@
+	cd ../obj && $(cc) $(std) $(lflags) $(obj) -o ../bin/$@
 
 ../obj/%.o:
 	$(MAKE) -C ../obj $*.o
