--- a/src/bin/makefile
+++ b/src/bin/makefile
@@ -1,7 +1,7 @@
 include ../../vars.make 
 
 $(bin): $(addprefix ../obj/, $(obj))
-	cd ../obj && $(cc) $(std) $(lflags) $(obj) -o ../bin/$@
+	cd ../obj && $(cc) -o ../bin/$@ $(std) $(obj) $(lflags)  
 
 ../obj/%.o:
 	$(MAKE) -C ../obj $*.o
